tests/compile_errors/early-return.buzz
// Code will never be reached
import "buzz:std";

test "Early return" {
    std\print("I sure hope i'm not interrupted...");

    return;

    std\print("Guess I was");
}
